--- a/src/styles/blogs.scss
+++ b/src/styles/blogs.scss
@@ -1,11 +1,11 @@
 @use "./config" as *;
 
 .blogs {
-  padding-bottom: 8vh;
+  padding-bottom: 10vh;
 
   &__grid {
     @include container($container);
-    margin-top: 5vh;
+    margin-top: 7vh;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(100%, 320px), 1fr));
     gap: 3.5rem 2.5rem;
